[package]
name = "raw91-tun"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base91 = "0.1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
socket2 = {version = "0.5", features= ["all"] }
# The tun crate; enable async feature if you later switch to Tokio.
# Version may vary by distro; 0.6 works in many environments.
tun = { version = "0.8", default-features = false }

# Linux-only deps (compile-gated in code if needed)
nix = "0.29"

[profile.release]
lto = true
codegen-units = 1